@@ -19,6 +19,7 @@ import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.model.property.SettableProperty;
 import edu.colorado.phet.common.phetcommon.model.property.ValueEquals;
 import edu.colorado.phet.common.phetcommon.model.property.integerproperty.IntegerProperty;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponentTypes;
 import edu.colorado.phet.common.phetcommon.util.Pair;
 import edu.colorado.phet.common.phetcommon.util.RichSimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
@@ -27,7 +28,9 @@ import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
+import edu.colorado.phet.common.piccolophet.simsharing.SimSharingDragHandler;
 import edu.colorado.phet.fractions.util.immutable.Vector2D;
+import edu.colorado.phet.fractionsintro.FractionsIntroSimSharing.Components;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.event.PBasicInputEventHandler;
 import edu.umd.cs.piccolo.event.PInputEvent;
@@ -202,8 +205,19 @@ public class NumberLineNode extends PNode {
         }}, color, borderStroke, Color.black ) {{
 
             addInputEventListener( new CursorHandler() );
-            addInputEventListener( new PBasicInputEventHandler() {
-                @Override public void mouseDragged( PInputEvent event ) {
+            addInputEventListener( new SimSharingDragHandler( Components.numberLineKnob, UserComponentTypes.sprite, true ) {
+                @Override protected void startDrag( final PInputEvent event ) {
+                    super.startDrag( event );
+                    handleMousePress( event );
+                }
+
+                @Override protected void drag( final PInputEvent event ) {
+                    super.drag( event );
+                    handleMousePress( event );
+                }
+
+                @Override protected void endDrag( final PInputEvent event ) {
+                    super.endDrag( event );
                     handleMousePress( event );
                 }
             } );
@@ -213,8 +227,19 @@ public class NumberLineNode extends PNode {
         //Arrow pointing to the location (for when tick marks get dense)
         arrowPath = new PhetPPath( color, new BasicStroke( borderStroke.getLineWidth() / 2f ), Color.black ) {{
             addInputEventListener( new CursorHandler() );
-            addInputEventListener( new PBasicInputEventHandler() {
-                @Override public void mouseDragged( PInputEvent event ) {
+            addInputEventListener( new SimSharingDragHandler( Components.numberLineArrow, UserComponentTypes.sprite, true ) {
+                @Override protected void startDrag( final PInputEvent event ) {
+                    super.startDrag( event );
+                    handleMousePress( event );
+                }
+
+                @Override protected void drag( final PInputEvent event ) {
+                    super.drag( event );
+                    handleMousePress( event );
+                }
+
+                @Override protected void endDrag( final PInputEvent event ) {
+                    super.endDrag( event );
                     handleMousePress( event );
                 }
             } );
